@@ -68,7 +68,6 @@ Test::Exception           = 0.29
 Test::More                = 0.94
 Test::Output              = 0.16
 Test::Script              = 1.07
-Test::Expect              = 0.30
 Test::Script::Run         = 0.03
 Test::Synopsis            = 0.06
 Data::Section             = 0.100770
